<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Apk GitHub User</string>
    <string name="avatar">Avatar</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="back_button_description" tools:keep="@string/back_button_description">Back</string>
    <string name="followers" tools:keep="@string/followers">Followers</string>
    <string name="following" tools:keep="@string/following">Following</string>
    <string name="tabs_for_different_sections" tools:keep="@string/tabs_for_different_sections">Tabs for different sections</string>
    <string name="icon_name" tools:keep="@string/icon_name">icon_name</string>
    <string name="github_user">Github User</string>
    <string name="icon_github">Icon Github</string>
    <string name="hello_blank_fragment" tools:ignore="UnusedResources">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="favorite_detail">favorite_detail</string>
    <string name="Favorite">Favorite</string>
</resources>